fixed some broken css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@ Bastien Sozeau <contact@noirblancrouge.com>
 
 /* Global colors */
 :root {
-	--background-color: #f8f5e8;
+	--background-color: #f3f2ee;
 	--default-color: #343434;
 	--heading-color: #050d18;
 	--accent-color: #d53e07;
